@@ -1,6 +1,7 @@
 #' Create XML node "tabbook" for RKWard plugins
 #'
 #' @param label Character string, a text label for this plugin element.
+#'		Must be set if \code{id.name="auto"}.
 #' @param tab.labels Character vector, where each string defines the name of one tab.
 #'		The number of \code{tab.labels} also defines the number of tabs.
 #' @param children An optional list with objects of class \code{XiMpLe.node} (or a list of these objects).
@@ -23,7 +24,13 @@
 #'   "Second Tab"), children=list(test.checkboxes, test.dropdown))
 #' cat(pasteXMLNode(test.tabbook, shine=1))
 
-rk.XML.tabbook <- function(label, tab.labels, children=list(), id.name="auto"){
+rk.XML.tabbook <- function(label=NULL, tab.labels, children=list(), id.name="auto"){
+	if(is.null(label)){
+		if(identical(id.name, "auto")){
+			stop(simpleError("If id.name=\"auto\", then 'label' must have a value!"))
+		} else {}
+	} else {}
+
 	num.tabs <-  length(tab.labels)
 	# check if number of children fits
 	if(length(children) > 0){
@@ -57,11 +64,15 @@ rk.XML.tabbook <- function(label, tab.labels, children=list(), id.name="auto"){
 				value="")
 		})
 
+
 	if(identical(id.name, "auto")){
 		tb.id <- auto.ids(label, prefix=ID.prefix("tabbook", length=4))
 	} else if(!is.null(id.name)){
 		tb.id <- id.name[[1]]
-	} else {}
+	} else {
+		tb.id <- NULL
+	}
+
 	tbk.attr.list <- list(id=tb.id, label=label)
 
 	tabbook <- new("XiMpLe.node",
