@@ -4,7 +4,8 @@
 #' "column", "copy", "dropdown", "formula", "frame", "input", "page", "radio", "row", "saveobject",
 #' "spinbox", "stretch", "tabbook", "text", "varselector" and "varslot".
 #'
-#' @param nodes A (list of) objects of class \code{XiMpLe.node}. 
+#' @param nodes A (list of) objects of class \code{XiMpLe.node}
+#' @param label Character string, a text label for this plugin element.
 #' @return A list of objects of class \code{XiMpLe.node}.
 #' @export
 #' @seealso
@@ -19,7 +20,7 @@
 #' test.wizard <- rk.XML.wizard(rk.XML.page(list(test.text, test.copy)))
 #' cat(pasteXMLNode(test.wizard, shine=1))
 
-rk.XML.wizard <- function(nodes){
+rk.XML.wizard <- function(nodes, label=NULL){
 	# check the node names and allow only valid ones
 	node.names <- sapply(child.list(nodes), function(this.node){
 			this.node@name
@@ -34,6 +35,7 @@ rk.XML.wizard <- function(nodes){
 
 	node <- new("XiMpLe.node",
 			name="wizard",
+			attributes=list(label=label),
 			children=child.list(nodes)
 		)
 
